--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hello world
+<!DOCTYPE>
+<html>
+<head>
+ <title></title> Hello World
+</head>
+  <body>
+     <img src="https://github.com/SLUGIS/logos/blob/master/div6.png?raw=true"/>
+    
+  </body>
+</html>  
+
+  
