--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE>
 <html>
 <head>
- <title></title> Hello World
+ <title>
+  <h3>Hello</h3>
+ </title>
 </head>
   <body>
      <img src="https://github.com/SLUGIS/logos/blob/master/div6.png?raw=true"/>
-    
+    <p>My name is Erik, and I live on the internet!</p>
   </body>
 </html>  
 
