--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
  <title>
-  <h3>Hello</h3>
+  Hello
  </title>
 </head>
   <body>
      <img src="https://github.com/SLUGIS/logos/blob/master/div6.png?raw=true"/>
+     <h4>testing...</h4>
     <p>My name is Erik, and I live on the internet!</p>
   </body>
 </html>  
