--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE>
 <html>
 <head>
- <title>
-  Hello
- </title>
+ <h2>HELLO</h2>
 </head>
   <body>
      <img src="https://github.com/SLUGIS/logos/blob/master/div6.png?raw=true"/>
