--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
      <img src="https://github.com/SLUGIS/logos/blob/master/div6.png?raw=true"/>
      <h4>testing...</h4>
-    <p>My name is Erik, and I live on the internet!</p>
+    <p>My name is Erik</p>
   </body>
 </html>  
 
