--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 <head>
  <h2>HELLO</h2>
 </head>
   <body>
      <img src="https://github.com/SLUGIS/logos/blob/master/div6.png?raw=true"/>
-     <h4>testing...</h4>
-    <p>My name is Erik</p>
+     <h4>My name is Erik. Welcome to my internet page.</h4>
+    
   </body>
 </html>  
 
