--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
  <link type="text/css" rel="stylesheet" href="index.html"/>
+ <style>
+  h2{
+   color:#cc0000;
+  }
+ </style>
  <h2>HELLO</h2>
 </head>
   <body>
