--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   }
  </style>
  
-<iframe height="600" frameborder="0" src="https://eholtz.cartodb.com/viz/bc5dd556-c54e-11e5-af7a-0e787de82d45/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+<iframe src="https://eholtz.cartodb.com/viz/bc5dd556-c54e-11e5-af7a-0e787de82d45/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
  
 </head>
 
