--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
      <br>
      <br>
      <br>
+     <ul>
+      <li>about me</li>
+      <li>resume</li>
+      <li>projects</li>
+     </ul>
      
      <div id="footer">
       
