--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <iframe src="https://eholtz.cartodb.com/viz/bc5dd556-c54e-11e5-af7a-0e787de82d45/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
  
      <div id="name">
-      <p>Erik Holtz</p>
+      <h1>Erik Holtz</h1>
      </div>
      
 </head>
@@ -23,11 +23,9 @@
      <br>
      <br>
      <br>
-     <ul>
-      <li>about me</li>
-      <li>resume</li>
-      <li>projects</li>
-     </ul>
+      <p>about me</p>
+      <p>resume</p>
+      <p>projects</p>
      <br>
      <br>
      <br>
