--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
      <br>
       <p>about me</p>
       <p>resume</p>
-      <p>projects</p>
+      <p>
+       <a href="projects.html">projects</a>
+      </p>
      <br>
      <br>
      <br>
