--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   
+<head>
   
+</head>
+  
+  
+<body>
+  <a href="index.html">back to Erik's homepage</a>
+  
+</body>  
   
 </html>
