--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,19 @@
   
   
 <body>
+  
+  
+   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css"/>
+   <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+   <div id="map"></div>
+  
+  
+  
+  
+  
+  
+  
+  
   <a href="index.html">back to Erik's homepage</a>
   
 </body>  
