--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
   
    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css"/>
    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-   <div id="map"></div>
+   <div id="leafmap"></div>
   
   
   
