--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
   
 <body>
   
-  
+   <link rel="stylesheet" href="stylesheet.css"/>
    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css"/>
    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
    <div id="leafmap"></div>
