--- a/projects.html
+++ b/projects.html
@@ -3,15 +3,25 @@
   
 <head>
   
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css"/>
+  
+  <style>
+      html, body,  #leafmap {
+        padding: 0;
+        margin: 0;
+        height : 100%;
+      }
+    </style>
+  
 </head>
   
   
 <body>
   
-   <link rel="stylesheet" href="stylesheet.css"/>
-   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css"/>
-   <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
    <div id="leafmap"></div>
+   
+   <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+  
   
   
   
