--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,15 @@
    <div id="leafmap"></div>
    
    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+   
+   var map = L.map('map').setView([35.322, -120.5], 10);
+   
+         L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
+        attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
+        maxZoom: 18,
+        id: eholtz.5f47224d
+        accessToken: pk.eyJ1IjoiZWhvbHR6IiwiYSI6Ik40Y3QyTUkifQ.w7y1ibG-oeP22MJcHPi54w
+        }).addTo(map);
   
   
   
