--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,7 @@
    
    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
    
+   <script>
    var map = L.map('map').setView([35.322, -120.5], 10);
    
          L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
@@ -30,6 +31,9 @@
         id: eholtz.5f47224d
         accessToken: pk.eyJ1IjoiZWhvbHR6IiwiYSI6Ik40Y3QyTUkifQ.w7y1ibG-oeP22MJcHPi54w
         }).addTo(map);
+        
+        
+  </script>      
   
   
   
