--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
   
 <head>
-  <link rel="stylesheet" href="stylesheet.css"
+  <link rel="stylesheet" href="stylesheet.css"/>
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css"/>
   
   <style>
