--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
       html, body,  #leafmap {
         padding: 0;
         margin: 0;
-        height : 100%;
+        height : 180px;
       }
     </style>
   
