--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
    
    <script>
-   var map = L.map('map').setView([35.322, -120.5], 10);
+   var map = L.map('leafmap').setView([35.322, -120.5], 10);
    
          L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
         attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
