--- a/projects.html
+++ b/projects.html
@@ -7,9 +7,9 @@
   
   <style>
       html, body,  #leafmap {
-        padding: 50;
+        padding: 100;
         
-        height : 400px;
+        height : 500;
       }
     </style>
   
