--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
       html, body,  #leafmap {
         padding: 100;
         
-        height : 500;
+        height : 500px;
       }
     </style>
   
