--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
   
 <head>
-  
+  <link rel="stylesheet" href="stylesheet.css"
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css"/>
   
   <style>
@@ -35,8 +35,13 @@
         
     
   
+  <br>
   
   
+  
+  
+  <iframe src="https://eholtz.cartodb.com/viz/bc5dd556-c54e-11e5-af7a-0e787de82d45/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+
   
   
   
