--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,9 @@ Welcome to projects page
 
 
 <a href="leaflet_map.html">leaflet</a>
+<br>
+<a href="index.html">back to Erik's homepage</a>
+
 </body>
 
 </html>
