--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   }
  </style>
  
+ <div id="header"></div>
+ 
   <iframe src="https://eholtz.cartodb.com/viz/bc5dd556-c54e-11e5-af7a-0e787de82d45/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 
 
