--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="stylesheet.css"/>
 
-Welcome to projects page
+projects
 </head>
 
 <body>
