--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,8 @@ projects
 
 <a href="leaflet_map.html">leaflet</a>
 <br>
+<a href="cartodb_map.html">cartodb</a>
+<br>
 <a href="index.html">back to Erik's homepage</a>
 
 </body>
