--- a/cartodb_map.html
+++ b/cartodb_map.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="stylesheet.css"/>
+  
+  <iframe src="https://eholtz.cartodb.com/viz/bc5dd556-c54e-11e5-af7a-0e787de82d45/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+
 
 </head>
 
 <body>
+  <p>
+    CartoDB
+  </p>
+  <p>
+    <a href="index.html">back to Erik's homepage</a>
+  </p>
 
 
 </body>
