--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
 
      <div id="name">
-      <h1 style="font-size:35px, text-align=center, font-color:#006666">Erik Holtz</h1>
+      <h1 style="font-size:35px, text-align=center, font-color:#006666, margin-top:100px">Erik Holtz</h1>
      </div>
      
 </head>
