--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  </style>
  
  
- <h1 style="font-size:35px, text-align=center, font-color:#006666">Erik Holtz</h1>
+ <h1>Erik Holtz</h1>
  
  <div id="header"></div>
  
