--- a/leaflet_map.html
+++ b/leaflet_map.html
@@ -2,6 +2,7 @@
 <html>
   
 <head>
+  <link rel="stylesheet" href="stylesheet.css"/>
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css"/>
   
   <style>
@@ -38,7 +39,7 @@
   
   
   
-  <a href="index.html">back to Erik's homepage</a>
+  <p><a href="index.html">back to Erik's homepage</a></p>
   
 </body>  
   
