--- a/projects.html
+++ b/projects.html
@@ -9,11 +9,11 @@ projects
 <body>
 
 
-<a href="leaflet_map.html">leaflet</a>
-<br>
-<a href="cartodb_map.html">cartodb</a>
-<br>
-<a href="index.html">back to Erik's homepage</a>
+<p><a href="leaflet_map.html">leaflet</a></p>
+
+<p><a href="cartodb_map.html">cartodb</a></p>
+
+<p><a href="index.html">back to Erik's homepage</a></p>
 
 </body>
 
