--- a/projects.html
+++ b/projects.html
@@ -3,15 +3,15 @@
 <head>
   <link rel="stylesheet" href="stylesheet.css"/>
 
-projects
+<h1>projects</h1>
 </head>
 
 <body>
 
 
-<p><a href="leaflet_map.html">leaflet</a></p>
+<p><a href="leaflet_map.html">Leaflet</a></p>
 
-<p><a href="cartodb_map.html">cartodb</a></p>
+<p><a href="cartodb_map.html">CartoDB</a></p>
 
 <p><a href="index.html">back to Erik's homepage</a></p>
 
