--- a/leaflet_map.html
+++ b/leaflet_map.html
@@ -13,6 +13,8 @@
       }
     </style>
     
+  <div id="header"></div>  
+    
   
 </head>
   
@@ -44,6 +46,8 @@
 <p><a href="projects.html">back to projects</a></p>  
   
 <p><a href="index.html">back to Erik's homepage</a></p>
+
+<div id="footer"></div>
   
 </body>  
   
