--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,8 @@
   <link rel="stylesheet" href="stylesheet.css"/>
 
 <h1>projects</h1>
+
+<div id="header"></div>
 </head>
 
 <body>
@@ -14,6 +16,8 @@
 <p><a href="cartodb_map.html">CartoDB</a></p>
 
 <p><a href="index.html">back to Erik's homepage</a></p>
+
+<div id="footer"></div>
 
 </body>
 
