--- a/leaflet_map.html
+++ b/leaflet_map.html
@@ -27,7 +27,7 @@
    <script>
    var map = L.map('leafmap').setView([35.280930, -120.660616], 13);
    
-         L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
+         L.tileLayer('https://api.tiles.mapbox.com/v4/{style}/{z}/{x}/{y}.png?access_token={accessToken}', {
         attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
         maxZoom: 18,
         style: 'mapbox://styles/eholtz/cikvway2r00dp9flxk0g4a6vy',
