--- a/leaflet_map.html
+++ b/leaflet_map.html
@@ -30,7 +30,7 @@
          L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
         attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
         maxZoom: 18,
-        style: 'mapbox://styles/eholtz/cikvway2r00dp9flxk0g4a6vy',
+        id: 'mapbox://styles/eholtz/cikvway2r00dp9flxk0g4a6vy',
         accessToken: 'pk.eyJ1IjoiZWhvbHR6IiwiYSI6Ik40Y3QyTUkifQ.w7y1ibG-oeP22MJcHPi54w'
         }).addTo(map);
         
