new file "mapbox_map.html" and link in "projects.html"

--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,8 @@
 <body>
 
 
+<p><a href="mapbox_map.html">Mapbox</a></p>
+
 <p><a href="leaflet_map.html">Leaflet</a></p>
 
 <p><a href="cartodb_map.html">CartoDB</a></p>
