--- a/cartodb_map.html
+++ b/cartodb_map.html
@@ -3,8 +3,7 @@
 <head>
   <link rel="stylesheet" href="stylesheet.css"/>
   
-  <iframe src="https://eholtz.cartodb.com/viz/bc5dd556-c54e-11e5-af7a-0e787de82d45/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-
+ <iframe width="100%" height="520" frameborder="0" src="https://eholtz.cartodb.com/viz/bc5dd556-c54e-11e5-af7a-0e787de82d45/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 
 </head>
 
