new html files and links on projects page
added leaflet_mapillary_map.html and mapbox_mapillary_map.html

--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,11 @@
 
 <p><a href="mapbox_map.html">Mapbox</a></p>
 
+<p><a href="mapbox_mapillary_map.html">Mapillary & Mapbox</a></p>
+
 <p><a href="leaflet_map.html">Leaflet</a></p>
+
+<p><a href="leaflet_mapillary_map.html">Mapillary & Leaflet</a></p>
 
 <p><a href="cartodb_map.html">CartoDB</a></p>
 
