--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,8 @@
 
 <p><a href="cartodb_map.html">CartoDB</a></p>
 
+<p><a href="qgis_leaflet.html">QGIS 2 Webmap</a></p>
+
 <p><a href="index.html">back to Erik's homepage</a></p>
 
 <div id="footer"></div>
