--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <p>about me</p>
       <p>resume</p>
       <p>
-       <a href="projects.html">projects</a>
+       <a href="projects.html">map projects</a>
       </p>
      <br>
      <br>
