--- a/pdfs_page.html
+++ b/pdfs_page.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="stylesheet.css"/>
     
     <div id="header"></div>
+    
+    <h1>PDF print maps</h1>
   </head>
   
   
