--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="stylesheet.css"/>
 
-<h1>projects</h1>
+<h1>map projects</h1>
 
 <div id="header"></div>
 </head>
