--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<p><a href="pdfs_page.html">PDF print maps</a></p>
+<p><a href="pdfs_page.html">Wall Maps</a></p>
 
 <p><a href="mapbox_map.html">Mapbox</a></p>
 
