--- a/leaflet_mobile.html
+++ b/leaflet_mobile.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <rel stylesheet="leaflet_mobile.css"/>
+    <link rel="stylesheet" href="leaflet_mobile.css"/>
     
   <head>
     
