--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,8 @@
 <p><a href="mapbox_map.html">Mapbox</a></p>
 
 <p><a href="leaflet_map.html">Leaflet</a></p>
+  
+  <p><a href="leaflet_mobile.html">Leaflet Mobile</a></p>  
 
 <p><a href="leaflet_mapillary_map.html">Mapillary & Leaflet</a></p>
 
