--- a/leaflet_mobile.html
+++ b/leaflet_mobile.html
@@ -9,7 +9,7 @@
   <head>
     
   <body>
-    <div id="eholtz.bf6e040d"></div>
+    <div id="mapid"></div>
     var map = L.map('map');
 
     L.tileLayer('https://api.tiles.mapbox.com/v4/eholtz.bf6e040d/997/256/{z}/{x}/{y}.png?access_token={accessToken}', {
