--- a/leaflet_mobile.html
+++ b/leaflet_mobile.html
@@ -10,7 +10,7 @@
     
   <body>
     <div id="mapid"></div>
-    var map = L.map('map');
+    var map = L.map('mapid');
 
     L.tileLayer('https://api.tiles.mapbox.com/v4/eholtz.bf6e040d/997/256/{z}/{x}/{y}.png?access_token={accessToken}', {
     attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
