--- a/leaflet_mobile.html
+++ b/leaflet_mobile.html
@@ -3,7 +3,13 @@
   <head>
      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
     <style>
-      #mapid { height: 180px; }
+      body {
+      padding: 0;
+      margin: 0;
+            }
+      html, body, #mapid {
+      height: 100%;
+            }
     </style>  
   </head>
   
