--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,8 @@
 <p><a href="cartodb_map.html">CartoDB</a></p>
 
 <p><a href="qgis_leaflet.html">QGIS 2 Webmap</a></p>
+  
+<p><a href="wine_storymap.html">Story Map of Paso Robles Wine Country</a></p>
 
 <p><a href="index.html">back to Erik's homepage</a></p>
 
