--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,8 @@
 <p><a href="qgis_leaflet.html">QGIS 2 Webmap</a></p>
   
 <p><a href="wine_storymap.html">Story Map of Paso Robles Wine Country</a></p>
+  
+<p><a href="odyssey.html">what about this story map?</a></p>
 
 <p><a href="index.html">back to Erik's homepage</a></p>
 
