--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
 
 <p><a href="qgis_leaflet.html">QGIS 2 Webmap</a></p>
   
-<p><a href="odyssey.html">what about this story map?</a></p>
+<p><a href="odyssey_wine.html">what about this story map?</a></p>
 
 <p><a href="index.html">back to Erik's homepage</a></p>
 
