--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 
 <p><a href="map_pdfs_page.html">Map PDFs</a></p>
 
-<p><a href="mapbox_map.html">Mapbox</a></p>
+< !--<p><a href="mapbox_map.html">Mapbox</a></p> -->
 
 <p><a href="leaflet_map.html">Leaflet</a></p>
   
