--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
 
 <!-- <p><a href="mapbox_map.html">Mapbox</a></p> -->
 
-<p><a href="leaflet_map.html">Leaflet</a></p>
+<!-- <p><a href="leaflet_map.html">Leaflet</a></p> -->
   
   <p><a href="leaflet_mobile.html">Leaflet Mobile</a></p>  
 
