--- a/projects.html
+++ b/projects.html
@@ -16,15 +16,13 @@
 
 <!-- <p><a href="leaflet_map.html">Leaflet</a></p> -->
   
-  <p><a href="leaflet_mobile.html">Leaflet Mobile</a></p>  
+<!-- <p><a href="leaflet_mobile.html">Leaflet Mobile</a></p> -->
 
-<p><a href="leaflet_mapillary_map.html">Mapillary & Leaflet</a></p>
+<!-- <p><a href="leaflet_mapillary_map.html">Mapillary & Leaflet</a></p> -->
 
-<p><a href="cartodb_map.html">CartoDB</a></p>
-
-<p><a href="qgis_leaflet.html">QGIS 2 Webmap</a></p>
+<!-- <p><a href="cartodb_map.html">CartoDB</a></p> -->
   
-<p><a href="odyssey_wine.html">what about this story map?</a></p>
+<p><a href="webmaps_page.html">Webmaps</a></p>
 
 <p><a href="index.html">back to Erik's homepage</a></p>
 
