--- a/webmaps_page.html
+++ b/webmaps_page.html
@@ -4,13 +4,17 @@
 
   <link rel="stylesheet" href="stylesheet.css"/>
   
-  <div id="header"/>
+  <h1>Webmaps</h1>
+  
+  <div id="header"></div>
   
 </head>
 
 <body>
   
-  <p><
+  <p><a href="odyssey_wine.html">Paso Robles Wineries story map</a></p>
+  
+  <div id="footer"></div>
 
 </body>
 
