--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<p><a href="map_pdfs_page.html">Map PDFs</a></p>
+<p><a href="map_pdfs_page.html">map PDFs</a></p>
 
 <!-- <p><a href="mapbox_map.html">Mapbox</a></p> -->
 
@@ -22,7 +22,7 @@
 
 <!-- <p><a href="cartodb_map.html">CartoDB</a></p> -->
   
-<p><a href="webmaps_page.html">Webmaps</a></p>
+<p><a href="webmaps_page.html">webmaps</a></p>
 
 <p><a href="index.html">back to Erik's homepage</a></p>
 
