--- a/webmaps_page.html
+++ b/webmaps_page.html
@@ -4,7 +4,7 @@
 
   <link rel="stylesheet" href="stylesheet.css"/>
   
-  <h1>Webmaps</h1>
+  <h1>webmaps</h1>
   
   <div id="header"></div>
   
@@ -12,7 +12,7 @@
 
 <body>
   
-  <p><a href="odyssey_wine.html">Paso Robles Wineries story map</a></p>
+  <p><a href="odyssey_wine.html">Paso Robles wineries story map</a></p>
   
   <div id="footer"></div>
 
