--- a/webmaps_page.html
+++ b/webmaps_page.html
@@ -14,6 +14,8 @@
   
   <p><a href="odyssey_wine.html">Paso Robles wineries story map</a></p>
   
+  <p><a href="projects.html">back to projects page</a></p>
+  
   <div id="footer"></div>
 
 </body>
