--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<p><a href="map_pdfs_page.html">map PDFs</a></p>
+<p><a href="map_pdfs_page.html">map pdfs</a></p>
 
 <!-- <p><a href="mapbox_map.html">Mapbox</a></p> -->
 
@@ -24,7 +24,7 @@
   
 <p><a href="webmaps_page.html">webmaps</a></p>
 
-<p><a href="index.html">back to Erik's homepage</a></p>
+<p><a href="index.html">back to erik's homepage</a></p>
 
 <div id="footer"></div>
 
