--- a/webmaps_page.html
+++ b/webmaps_page.html
@@ -12,7 +12,7 @@
 
 <body>
   
-  <p><a href="odyssey_wine.html">Paso Robles wineries story map</a></p>
+  <p><a href="odyssey_wine.html">paso robles wineries story map</a></p>
   
   <p><a href="projects.html">back to projects page</a></p>
   
