--- a/odyssey_wine.html
+++ b/odyssey_wine.html
@@ -272,7 +272,7 @@ Click the Next arrow below to start the tour!
 
 A description of the winery can go here to summarize its key features. This should be limited to roughly a paragraph.
 
-Pictures can also be included.
+Pictures can also be included in the description.
 
 ![Adelaida pic](https://scontent.fsnc1-3.fna.fbcdn.net/v/t1.0-9/13012657_10153576481492844_4055048879715998237_n.jpg?oh=1206352a4075e2aca299163b5c4dacf9&oe=58A61390)
 
