--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
      <br>
      <br>
      <br>
-      <p>about me</p>
+      <p>
+       <a href="about_me.html">about me</a>
+      </p>
       <p>resume</p>
       <p>
        <a href="projects.html">map projects</a>
