--- a/odyssey_wine.html
+++ b/odyssey_wine.html
@@ -270,6 +270,9 @@ Click the Next arrow below to start the tour!
 - zoom: 16
 ```
 
+Hover over the grapes icon to see the name of the winery at that location. Additionally, click on the icon to display the winery's
+address and a link to its website.
+
 A description of the winery can go here to summarize its key features. This should be limited to roughly a paragraph.
 
 Pictures can also be included in the description.
