--- a/about_me.html
+++ b/about_me.html
@@ -2,10 +2,18 @@
 <html>
 
 <head>
+  
+  <link rel="stylesheet" href="stylesheet.css"/>
 
 </head>
 
 <body>
+  
+  <p>
+    Hi! My name is Erik. I am a GIS/mapping contractor from San Luis Obispo, California.
+    I thoroughly enjoy making maps and working with spatial data using the latest GIS tools.
+    I like to keep busy with side projects on top of my day-to-day work, so I made this page to showcase some of those projects. I would include some of my professional work for a more well-rounded portfolio… However, essentially all of my contracting work has been for state and local agencies making maps that aren’t meant to be made public. So this is where my fun maps live!
+  </p>
 
 </body>
 </html>
