--- a/about_me.html
+++ b/about_me.html
@@ -9,7 +9,7 @@
 
 <body>
   
-  <p style="max-width:400px; align-content:center;">
+  <p style="max-width:30%; align-content:center;">
     Hi! My name is Erik. I am a GIS/mapping contractor from San Luis Obispo, California.
     I thoroughly enjoy making maps and working with spatial data using the latest GIS tools.
     I like to keep busy with side projects on top of my day-to-day work, so I made this page to showcase some of those projects.
