--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<p><a href="map_pdfs_page.html">map pdfs</a></p>
+<p><a href="maps_page.html">maps</a></p>
 
 <!-- <p><a href="mapbox_map.html">Mapbox</a></p> -->
 
