--- a/about_me.html
+++ b/about_me.html
@@ -3,7 +3,7 @@
 
 <head>
   
-  <link rel="stylesheet" href="stylesheet.css"/>
+  <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 
 </head>
 
