--- a/about_me.html
+++ b/about_me.html
@@ -14,6 +14,10 @@
     I thoroughly enjoy making maps and working with spatial data using the latest GIS tools.
     I like to keep busy with side projects on top of my day-to-day work, so I made this page to showcase some of those projects.
   </p>
+  
+  <p>
+    <a href="index.html">back to homepage</a>
+  </p>  
 
 </body>
 </html>
