--- a/about_me.html
+++ b/about_me.html
@@ -11,8 +11,8 @@
   
   <p>
     Hi! My name is Erik. I am a GIS/mapping contractor from San Luis Obispo, California.
-    I thoroughly enjoy making maps and working with spatial data using the latest GIS tools.
-    I like to keep busy with side projects on top of my day-to-day work, so I made this page to showcase some of those projects.
+    <br>I enjoy making maps and working with spatial data using a variety of mapping and design tools.
+    <br>I like to keep busy with side projects on top of my day-to-day work, so I made this page to showcase some of those projects.
   </p>
   
   <p>
