--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p>
        <a href="about_me.html">about me</a>
       </p>
-      <p>resume</p>
+     <!-- <p>resume</p>  -->
       <p>
        <a href="projects.html">map projects</a>
       </p>
