--- a/about_me.html
+++ b/about_me.html
@@ -10,9 +10,11 @@
 <body>
   
   <p>
-    Hi! My name is Erik. I am a GIS/mapping contractor from San Luis Obispo, California.
-    <br>I enjoy making maps and working with spatial data using a variety of mapping and design tools.
-    <br>I like to keep busy with side projects on top of my day-to-day work, so I made this page to showcase some of those projects.
+    Hi! My name is Erik. I am a GIS/mapping contractor from
+    <br>San Luis Obispo, California. I enjoy making maps and
+    <br>working with spatial data using a variety of mapping and design tools.
+    <br>I like to keep busy with side projects on top of my day-to-day work,
+    <br>so I made this page to showcase some of those projects.
   </p>
   
   <p>
