--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
 
 <h1>map projects</h1>
 
-<div id="header"></div>
+<!-- <div id="header"></div>  -->
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 
 <p><a href="index.html">back to erik's homepage</a></p>
 
-<div id="footer"></div>
+<!--  <div id="footer"></div>  -->
 
 </body>
 
