--- a/webmaps_page.html
+++ b/webmaps_page.html
@@ -6,7 +6,7 @@
   
   <h1>webmaps</h1>
   
-  <div id="header"></div>
+<!--  <div id="header"></div>  -->
   
 </head>
 
@@ -16,7 +16,7 @@
   
   <p><a href="projects.html">back to projects page</a></p>
   
-  <div id="footer"></div>
+<!--  <div id="footer"></div>  -->
 
 </body>
 
