--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
  <p><a href="webmaps_page.html">webmaps</a></p>  
 -->
 
-<p><a href="index.html">back to erik's homepage</a></p>
+<p><a href="index.html">back to homepage</a></p>
 
 <!--  <div id="footer"></div>  -->
 
