--- a/index.html
+++ b/index.html
@@ -23,14 +23,26 @@
   <body>
      
 
-     
+       <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <p>
+    Hi! My name is Erik. I am a GIS/mapping contractor from
+    <br>San Luis Obispo, California. I enjoy making maps and
+    <br>working with spatial data using a variety of mapping and design tools.
+    <br>I like to keep busy with side projects on top of my day-to-day work,
+    <br>so I made this page to showcase some of those projects.
+  </p>
      <br>
      <br>
      <br>
-      <p>
+    <!--  <p>
        <a href="about_me.html">about me</a>
       </p>
-     <!-- <p>resume</p>  -->
+      <p>resume</p>  -->
       <p>
        <a href="projects.html">map projects</a>
       </p>
