--- a/projects.html
+++ b/projects.html
@@ -38,8 +38,9 @@
   
  <p><a href="webmaps_page.html">webmaps</a></p>  
 -->
-
-<p><a href="index.html">back to homepage</a></p>
+<br>
+<br>
+<p><a href="index.html">back</a></p>
 
 <!--  <div id="footer"></div>  -->
 
