--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,8 @@
     <!-- <p><a href="map_pdfs/world_labeled_1.pdf">world map</a></p> -->
     
     <p><a href="map_pdfs/collage_w_name.jpg">collage world map</a></p>
+  
+    <p><a href="map_pdfs/Westeros_Map_Outlines_name">game of thrones - westeros map</a></p>
     
     <p><a href="map_pdfs/SLO_greyscale60.pdf">san luis obispo greyscale</a></p>
   
