--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   <p>
     Hi! My name is Erik. I am a GIS/mapping contractor from
     <br>San Luis Obispo, California. I enjoy making maps and
-    <br>working with spatial data using a variety of mapping and design tools.
+    <br>manipulating spatial data with mapping and design tools.
     <br>I like to keep busy with side projects on top of my day-to-day work,
-    <br>so I made this page to showcase some of those projects.
+    <br>so I made this page to display some of them.
   </p>
      <br>
      <br>
