--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <br>San Luis Obispo, California. I enjoy making maps and
     <br>manipulating spatial data with mapping and design tools.
     <br>I like to keep busy with side projects on top of my day-to-day work,
-    <br>so I made this page to display some of them.
+    <br>so I made this site to display some of them.
   </p>
      <br>
      <br>
