--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <br>
   <br>
   <p>
-    Hi! My name is Erik. I am a GIS/mapping contractor from
-    <br>San Luis Obispo, California. I enjoy making maps and
+    hi! my name is erik. i am a gis/mapping contractor from
+    <br>san luis obispo, california. i enjoy making maps and
     <br>manipulating spatial data with mapping and design tools.
-    <br>I like to keep busy with side projects on top of my day-to-day work,
-    <br>so I made this site to display some of them.
+    <br>i like to keep busy with side projects on top of my day-to-day work,
+    <br>so i made this site to display some of them.
   </p>
      <br>
      <br>
