--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
   </p>
      <br>
      <br>
+   <p>
+    any of the maps on the projects page are available for
+    professional printing. contact me with any questions:
+    erikholtzgis@gmail.com
+   </p>
     <!--  <p>
        <a href="about_me.html">about me</a>
       </p>
