--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
      <br>
    <p>
     any of the maps on the projects page are available for
-    <br>professional printing. contact me with any questions:
-    <br>erikholtzgis@gmail.com
+    <br>professional printing. contact me at erikholtzgis@gmail.com
    </p>
     <!--  <p>
        <a href="about_me.html">about me</a>
