--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
      <br>
      <br>
    <p>
-    any of the maps on the projects page are available for
-    <br>professional printing. contact me at erikholtzgis@gmail.com
+    any of the maps on the projects page (excluding webmaps) are available for
+    <br>purchase. for a professional print contact me at
+    <br>erikholtzgis@gmail.com
    </p>
     <!--  <p>
        <a href="about_me.html">about me</a>
