--- a/SLO_wine.html
+++ b/SLO_wine.html
@@ -360,6 +360,13 @@ Click on any of the grapes on the map to pull up more information for a particul
 ```
 ![Kynsi Winery] (https://scontent.fsnc1-4.fna.fbcdn.net/v/t31.0-8/14409872_10153729121406331_3856316530015398844_o.jpg?oh=2070999743215fa6b9302e86a503ce3d&oe=58E3E36A)
 
+#Laetitia Vineyard & Winery
+```
+- center: [35.0921, -120.5363]
+- zoom: 15
+```
+![Laetitia Vineyard & Winery](https://scontent.fsnc1-3.fna.fbcdn.net/v/t1.0-9/416929_331655543536730_1823629687_n.jpg?oh=e481afa90d9a14b5c192711c4ba6e403&oe=58B2CA9C)
+
 #Peloton Cellars
 ```
 - center: [35.1794, -120.7343]
