--- a/SLO_wine.html
+++ b/SLO_wine.html
@@ -304,7 +304,7 @@ Click on any of the grapes on the map to pull up more information for a particul
 ```
 ![Chamisal Vineyards](https://scontent.fsnc1-4.fna.fbcdn.net/v/t31.0-8/10483963_10152230939676517_808654772970159554_o.jpg?oh=fec49237f2b63aa04cbed59c9c4a0b1c&oe=58F5F57D)
 
-#Chene Vineyards
+#Chêne Vineyards
 ```
 - center: [35.1863, -120.5767]
 - zoom: 16
