--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
      <br>
      <br>
    <p>
-    any of the maps on the projects page (excluding webmaps) are available for
+    everything on the projects page (excluding webmaps) is available for
     <br>purchase. for a professional print contact me at
     <br>erikholtzgis@gmail.com
    </p>
