--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
    <p>
     everything on the projects page (excluding webmaps) is available for
     <br>purchase. for a professional print contact me at
-    <br>erikholtzgis@gmail.com
+    <br>erikholtzgis@gmail.com.
    </p>
     <!--  <p>
        <a href="about_me.html">about me</a>
