--- a/SLO_wine.html
+++ b/SLO_wine.html
@@ -323,7 +323,7 @@ Click on any of the grapes on the map to pull up more information for a particul
 - center: [35.2335, -120.6890]
 - zoom: 18
 ```
-![Clesi](https://scontent.fsnc1-4.fna.fbcdn.net/v/t1.0-9/14670595_10157491988630018_1661148117244533736_n.jpg?oh=4e144573653529ac32211ef145f4c13b&oe=58AEC4A3)
+![Clesi](https://scontent.xx.fbcdn.net/v/t1.0-9/14670595_10157491988630018_1661148117244533736_n.jpg?oh=f4bc63ccaaad4d7faa48750f4b818c96&oe=59256BA3)
 
 #Croma Vera Wines
 ```
