--- a/SLO_wine.html
+++ b/SLO_wine.html
@@ -337,7 +337,7 @@ Click on any of the grapes on the map to pull up more information for a particul
 - center: [35.2169, -120.6077]
 - zoom: 17
 ```
-![Edna Valley Vineyard](https://scontent.fsnc1-4.fna.fbcdn.net/v/t31.0-8/13248521_1768536243376597_6651993852872660417_o.jpg?oh=16d58a9685b4ef638601132ec14a3951&oe=58AFF46E)
+![Edna Valley Vineyard](https://scontent.xx.fbcdn.net/v/t31.0-8/s960x960/15896345_10157959862795104_8035675984508462675_o.jpg?oh=9ee99a0b43010837f88ed73454e3388e&oe=59708D80)
 
 #Filipponi Ranch Cellars
 ```
