--- a/SLO_wine.html
+++ b/SLO_wine.html
@@ -351,7 +351,7 @@ Click on any of the grapes on the map to pull up more information for a particul
 - center: [35.2082,-120.7186]
 - zoom: 15
 ```
-![Kelsey See Canyon Vineyards](https://scontent.fsnc1-4.fna.fbcdn.net/v/t1.0-9/15542078_10157964091015010_3020491083508927862_n.jpg?oh=48068f9ae9eb3bd229406ebffb6d8952&oe=58B2C892)
+![Kelsey See Canyon Vineyards](https://scontent.xx.fbcdn.net/v/t1.0-9/16174608_10158154070330010_2866395508279676262_n.jpg?oh=5ab6ba1db6539ec57aed528e405241d3&oe=593DCD8B)
 
 #Kynsi Winery
 ```
