--- a/SLO_wine.html
+++ b/SLO_wine.html
@@ -365,7 +365,7 @@ Click on any of the grapes on the map to pull up more information for a particul
 - center: [35.0921, -120.5363]
 - zoom: 15
 ```
-![Laetitia Vineyard & Winery](https://scontent.fsnc1-3.fna.fbcdn.net/v/t1.0-9/416929_331655543536730_1823629687_n.jpg?oh=e481afa90d9a14b5c192711c4ba6e403&oe=58B2CA9C)
+![Laetitia Vineyard & Winery](https://scontent.xx.fbcdn.net/v/t1.0-9/12742620_989296824439262_5209880554859988541_n.jpg?oh=4fb7f54c6ccc88631b73a12fd11e24f9&oe=592D39FC)
 
 #Peloton Cellars
 ```
