--- a/SLO_wine.html
+++ b/SLO_wine.html
@@ -372,7 +372,7 @@ Click on any of the grapes on the map to pull up more information for a particul
 - center: [35.1794, -120.7343]
 - zoom: 18
 ```
-![Peloton Cellars](https://scontent.fsnc1-4.fna.fbcdn.net/v/t31.0-8/12080042_1190146347679752_6403846969938343845_o.jpg?oh=3f99e01690c1b57e7ece890f3ca76802&oe=58B53B89)
+![Peloton Cellars](https://scontent.xx.fbcdn.net/v/t1.0-9/12072671_1190146347679752_6403846969938343845_n.jpg?oh=8fe9f3babef7d79bbf4920d20230f571&oe=5970A1AB)
 
 #Phantom Rivers Winery
 ```
