--- a/SLO_wine.html
+++ b/SLO_wine.html
@@ -428,7 +428,7 @@ Click on any of the grapes on the map to pull up more information for a particul
 - center: [35.2312, -120.6243]
 - zoom: 15
 ```
-![Tolosa Winery](https://scontent.fsnc1-4.fna.fbcdn.net/v/t1.0-9/10169202_10152733315883505_237605758948076606_n.jpg?oh=71bd66eb34285ce8c5b50d0bae3dba0f&oe=58AF4D07)
+![Tolosa Winery](https://scontent.xx.fbcdn.net/v/t1.0-9/16830907_10154413342023505_1870518916336971768_n.jpg?oh=a2e454fc20bb4a7f71a03017e5fc17d2&oe=593A65D5)
 
 #Wolff Vineyards
 ```
