--- a/SLO_wine.html
+++ b/SLO_wine.html
@@ -316,7 +316,7 @@ Click on any of the grapes on the map to pull up more information for a particul
 - center: [35.1981, -120.6052]
 - zoom: 16
 ```
-![Claiborne & Churchill Winery](https://scontent.fsnc1-4.fna.fbcdn.net/v/t31.0-8/14047147_10154572202171614_1161042148334860622_o.jpg?oh=bbec4521fe25a8e50fdceb50300e62ff&oe=58BA1266)
+![Claiborne & Churchill Winery](https://scontent-sjc2-1.xx.fbcdn.net/v/t31.0-8/15776688_10155015500011614_1925366044851172123_o.jpg?oh=a610c2b51224f740a7e210976afb875c&oe=595C0EDF)
 
 #Clesi Wines
 ```
