--- a/SLO_wine.html
+++ b/SLO_wine.html
@@ -379,7 +379,7 @@ Click on any of the grapes on the map to pull up more information for a particul
 - center:[35.1242, -120.577522]
 - zoom: 15
 ```
-![Phantom Rivers Winery](https://scontent.fsnc1-3.fna.fbcdn.net/v/t1.0-9/1916030_191650903717_6851167_n.jpg?oh=a93ccdf2b1bed3f0707752b6a1c963d9&oe=58DD48F5)
+![Phantom Rivers Winery](https://scontent-sjc2-1.xx.fbcdn.net/v/t31.0-8/15304509_10154743392473718_4704471456631149608_o.jpg?oh=e76924a8a1aa48bc54f7051897ab19bd&oe=5959E6E4)
 
 #Saucelito Canyon Vineyard
 ```
