--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,8 @@
     <p><a href="map_pdfs/SLO_greyscale60.pdf">san luis obispo greyscale</a></p> -->
   
     <p><a href="SLO_wine.html">san luis obispo wine country virtual tour</a></p>
+  
+    <p><a href="popup_example_map.html">interactive popup example map</a></p>
     
   <!--  <p><a href="map_pdfs/slo_roadmap_30x30.pdf">san luis obispo streetmap</a></p>   -->
     
